--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -14,6 +14,9 @@
     <a class="social-button codepen hidden"><i class="icon-codepen"></i></a>
     <a class="social-button youtube hidden"><i class="icon-youtube"></i></a>
     <a class="social-button vine hidden"><i class="icon-vine"></i></a>
+    // Added lines to include LinkedIn and Google+
+    <a class="social-button linkedin hidden"><i class="icon-linkedin"></i></a>
+    <a class="social-button gplus hidden"><i class="icon-gplus"></i></a>
   </div>
 
   <script>
@@ -40,6 +43,11 @@
           return "https://www.youtube.com/user/" + username;
         case "Vine":
           return "https://www.vine.co/" + username;
+      // Added lines to include LinkedIn and Google+
+        case "Linkedin":  
+          return "https://uk.linkedin.com/in/" + username;
+        case "Gplus":  
+          return "https://plus.google.com/" + username;
       }
     }
 
@@ -63,6 +71,9 @@
       revealPlatform('Codepen');
       revealPlatform('Youtube');
       revealPlatform('Vine');
+      // Added lines to include LinkedIn and Google+
+      revealPlatform('Linkedin');
+      revealPlatform('Gplus');
     }
 
     $(revealSocialLinks);
