Added style for darker link color #B710EF

--- a/sass/partials/_global_styles.scss
+++ b/sass/partials/_global_styles.scss
@@ -12,6 +12,7 @@ $secondary-colour: #254E70;
 $tertiary-colour: #FF4B3E;
 $font-colour: #011627;
 $background-colour: #EFEFEF;
+$link-colour: #B710EF;
 
 /* Padding */
 $small-padding: 0.2em;
