--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -103,7 +103,7 @@ TIP: Example for TIP Box
         overflow-wrap: break-word !important;
         word-wrap: break-word !important;
         white-space: pre-wrap !important;
-        color:#484019 !important;
+        color:#fff !important;
         -webkit-border-radius:1px;
         -moz-border-radius:1px;border-radius:1px;
 }
@@ -113,7 +113,7 @@ TIP: Example for TIP Box
         overflow-wrap: break-word !important;
         word-wrap: break-word !important;
         white-space: pre-wrap !important;
-        color:#445028 !important;
+        color:#fff !important;
 }
 
 
@@ -135,7 +135,7 @@ TIP: Example for TIP Box
         overflow-wrap: break-word !important;
         word-wrap: break-word !important;
         white-space: pre-wrap !important;
-        color:#000 !important;
+        color:#f44336 !important;
 }
 
 .language-note_green {
@@ -144,7 +144,7 @@ TIP: Example for TIP Box
         overflow-wrap: break-word !important;
         word-wrap: break-word !important;
         white-space: pre-wrap !important;
-        color:#000 !important;
+        color:#4CAF50 !important;
 }
 
 .language-note {
@@ -153,7 +153,7 @@ TIP: Example for TIP Box
         overflow-wrap: break-word !important;
         word-wrap: break-word !important;
         white-space: pre-wrap !important;
-        color:#000 !important;
+        color:#2196F3 !important;
 }
 
 
