--- a/partials/css_styles.hbs
+++ b/partials/css_styles.hbs
@@ -12,3 +12,4 @@
 <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'/>
 <link type="text/css" rel="stylesheet" href="{{asset 'css/fontello.css'}}"/>
 <link type="text/css" rel="stylesheet" href="{{asset 'css/prism.css'}}"/>
+<link type="text/css" rel="stylesheet" href="{{asset 'css/prism-line-numbers.css'}}"/>
