--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -55,7 +55,10 @@ h3 {
   color: white;
   text-align: justify;
   border: 1px #505C7A;
-  background-color: #505C7A;
+  background-color: #505C7A !important;
+  overflow-wrap: break-word !important;
+  word-wrap: break-word !important;
+  white-space: pre-wrap !important;
   padding-top: 10px;
   padding-right: 10px;
   padding-bottom: 10px;
@@ -69,6 +72,9 @@ h3 {
   text-align: justify;
   border: 1px #505C7A;
   background-color: #505C7A !important;
+  overflow-wrap: break-word !important;
+  word-wrap: break-word !important;
+  white-space: pre-wrap !important;
   padding-top: 10px;
   padding-right: 10px;
   padding-bottom: 10px;
