--- a/default.hbs
+++ b/default.hbs
@@ -9,7 +9,7 @@
     {{! Page Meta}}
     <title>{{meta_title}}</title>
     <meta name="description" content="{{meta_description}}" />
-    <link rel="icon" href="{{@blog.logo}}" />
+    <link rel="icon" href="{{@site.logo}}" />
 
     {{>css_styles}}
     {{>header_scripts}}
