--- a/partials/post_header.hbs
+++ b/partials/post_header.hbs
@@ -1,6 +1,6 @@
 {{navigation}}
-<a href="{{@blog.url}}" class="blog-title-background">
-  <h1>{{@blog.title}}</h1>
+<a href="{{@site.url}}" class="blog-title-background">
+  <h1>{{@site.title}}</h1>
 </a>
 
 <!-- for ghosthunter search -->
