Changes to make the theme compatible with Ghost V3.x

--- a/partials/fp_header.hbs
+++ b/partials/fp_header.hbs
@@ -11,7 +11,8 @@
 </form>
 </div>
 <section id="results" style="text-align:center"></section>
-<script src="{{asset "js/jquery.ghostHunter.min.js"}}"></script>
+<script type="text/javascript" src="{{asset "ghostHunter/dist/jquery.ghosthunter.js"}}"></script>
+<!-- <script src="{{asset "js/jquery.ghostHunter.min.js"}}"></script> -->
     <script>
         $("#search-field").ghostHunter({
             results   : "#results",
