--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,6 +1,6 @@
 <footer>
   <div class="footer-container">
-    <a href="{{@site.url/rss}}" class="social-button"><i class="icon-rss"></i></a>
+    <a href="{{@site.url}}/rss" class="social-button"><i class="icon-rss"></i></a>
     <a class="social-button twitter hidden"><i class="icon-twitter"></i></a>
     <a class="social-button github hidden"><i class="icon-github"></i></a>
     <a class="social-button facebook hidden"><i class="icon-facebook"></i></a>
